chore: fix mobile viewport on Safari

--- a/homepage/index.css
+++ b/homepage/index.css
@@ -38,6 +38,7 @@ code {
 		'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
 		'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 	font-size: 90%;
+	word-break: break-all;
 }
 
 footer {
